kotlin-parser/src/test/semlang/validatorTests/fail/integerLiteral2.sem
function myStuff.myFunction(): Integer {
  return Integer."01"
}
